# Fiduccia-Mattheyses

./: .gitignore  CMakeLists.txt  Description.docx  README.md  Results.xlsx  benchmark.py  benchmark.sh  parse.py
src/: main.cc
src/include/: Algorithm.h  AlgorithmMod.h  GainContainer.h  HGraph.h  Logger.h  Partitions.h
src/lib/: Algorithm.cc  GainContainer.cc  HGraph.cc  Logger.cc  Partitions.cc
src/lib/modified/: AlgorithmMod.cc  CMakeLists.txt  GainContainer.cc  GainContainer.h
src/lib/original/: CMakeLists.txt  GainContainer.cc  GainContainer.h
